// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformTextLinkCodeMarks should not change text nodes with valid mark combinations 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "href": "http://google.com",
              },
              "type": "link",
            },
            Object {
              "attrs": Object {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
          ],
          "text": "world",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
          ],
          "text": " ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "em",
            },
            Object {
              "type": "strong",
            },
            Object {
              "attrs": Object {
                "color": "#6554c0",
              },
              "type": "textColor",
            },
            Object {
              "type": "strike",
            },
            Object {
              "attrs": Object {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "more",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformTextLinkCodeMarks should remove code marks and preserve link marks on text node 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "text with link and code mark",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
